# masterclass_henry_ai_engineering

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  documentacion_tecnica.md  main.py  main_hybrid.py  model_without_context.py  pyproject.toml
chroma_db_test/: chroma.sqlite3
docs/: CONCEPTOS_RAG.html  CONCEPTOS_RAG.md  PROMPT_ENGINEERING.html  PROMPT_ENGINEERING.md
